cmake_minimum_required(VERSION 3.15)
project(CprogramDemo02 C)

set(CMAKE_C_STANDARD 99)

add_executable(CprogramDemo02 main.c demo04/demo01.c demo06/demo01.c)
add_executable(demo01 demo01/demo01.c)
add_executable(demo02 demo01/demo02.c demo01/demo22.c)
add_executable(demo03 demo02/demo01.c)
add_executable(demo04 demo02/demo02.c)
add_executable(demo05 demo02/demo03_swap/swapDemo.c)
#第三节
add_executable(demo06 demo03/demo01.c)
add_executable(demo07 demo03/demo02.c)
add_executable(demo08 demo03/demo03.c)
add_executable(demo09 demo03/demo04.c)
add_executable(demo10 demo03/demo05.c)
add_executable(demo11 demo03/demo06.c)
add_executable(demo12 demo03/demo07.c)
#第四节
add_executable(demo13 demo04/demo01.c)
add_executable(demo14 demo04/demo02.c)
add_executable(demo15 demo04/demo03.c)
add_executable(demo16 demo04/demo04.c)
add_executable(demo17 demo04/demo05.c)
#第五节
add_executable(demo18 demo05/demo01.c)
add_executable(demo19 demo05/demo02.c)
add_executable(demo20 demo05/demo03.c)
add_executable(demo21 demo05/demo04.c)
add_executable(demo22 demo05/demo05.c)
add_executable(demo23 demo05/demo06.c)
add_executable(demo24 demo05/demo07.c)
#第六节
add_executable(demo25 demo06/demo01.c)
add_executable(demo26 demo06/demo02.c)
add_executable(demo27 demo06/demo03.c)
add_executable(demo28 demo06/demo04.c)
add_executable(demo29 demo06/demo05.c)
add_executable(demo30 demo06/demo06.c)
add_executable(demo31 demo06/demo07.c)
add_executable(demo32 demo06/demo08.c)
add_executable(demo33 demo06/demo09.c)